[package]
name = "hole"
version = "0.1.0"
authors = ["erin petra sofiya moon <erin@hecke.rs>"]
edition = "2021"

[dependencies]
structopt = "0.3"
color-eyre = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"

winit = "0.26.0"
wgpu = "0.12.0"

pollster = "0.2.4"
bytemuck = { version = "1.7.3", features = ["derive"] }
ultraviolet = "0.8.1"
